# PLatex

./: .gitignore  README.md  _test_scan.py  actions_check.json  artifacts.json  build_installer.py  build_linux.py  config.example.yaml  launcher.py  platex-client.iss  platex-client.spec  pyproject.toml  test_hotkey2.py  test_hotkey3.py  test_win32_only.py
.github/workflows/: build.yml  cleanup-releases-tags.yml  release.yml
example/鼠标点击快捷键插件v5.0/: 5.0更新说明.md  default.ini  使用说明.txt
scripts/: _build_installer.py  _generate_icon.py  build_installer.py  glm_vision_ocr.py  hotkey_click.py  mathpix_ocr.py
tests/: test_api_key_masking.py  test_api_key_masking_comprehensive.py  test_app.py  test_app_state.py  test_app_state_comprehensive.py  test_bug_hunt.py  test_bugs.py  test_clipboard.py  test_comprehensive.py  test_config.py  test_config_comprehensive.py  test_config_extended.py  test_config_manager.py  test_config_manager_logging_clipboard.py  test_events.py  test_events_comprehensive.py  test_events_state.py  test_history.py  test_history_comprehensive.py  test_history_extended.py  test_i18n.py  test_loader.py  test_logging_utils.py  test_models.py  test_modules_extended.py  test_mouse_input.py  test_platform_utils.py  test_popup_manager.py  test_popup_manager_extra.py  test_popup_watcher_loader_i18n.py  test_script_base.py  test_script_context.py  test_script_context_apis.py  test_script_registry.py  test_script_registry_extra.py  test_script_safety.py  test_script_safety_extra.py  test_scripts.py  test_scripts_comprehensive.py  test_secrets.py  (+4 more)
(+48 files in other folders)
